[project]
name = "security-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.31.0",
    "google-cloud-discoveryengine>=0.13.12,<0.14.0",
    "google-cloud-aiplatform[adk,agent_engines]>=1.126.1,<2.0.0",
    "google-genai>=1.9.0,<2.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "absl-py>=2.2.1,<3.0.0",
]
